# sketchup-c-api-sandbox

./: .gitignore  CMakeLists.txt  README.md  SketchUp.cmake  gen.bat
100_Reading/: CMakeLists.txt
100_Reading/src/: reading.cpp
101_Writing/: CMakeLists.txt
200_Model_From_Existing/: CMakeLists.txt
200_Model_From_Existing/src/: main.cpp
assimp-to-skp/: CMakeLists.txt  README.md
assimp-to-skp/cmake/: Findassimp.cmake
assimp-to-skp/src/: a2s.cpp  output_sketchup_error.h
c++-wrapper/: .gitignore  CMakeLists.txt  wrapper.h
c++-wrapper/src/: ComponentInstance.cpp  ComponentInstance.h  Face.cpp  Face.h  GuideLine.h  GuidePoint.cpp  Model.cpp  Model.h  funcs.h
cmake/: SketchUp.cmake  assimp.cmake
component-instance-saveas/: CMakeLists.txt  Makefile
component-instance-saveas/src/: save_instance.cpp
iterate_entities/: .gitignore  CMakeLists.txt  README.md  gen.bat
iterate_entities/b/: CMakeCache.txt
iterate_entities/src/: ComponentInstance.h  DrawingElement.cpp  DrawingElement.h  Edge.cpp  Entities.cpp  Face.cpp  Group.cpp  GuidePoint.h  edge.h  entities.h  face.h  main.cpp  model.h  output_sketchup_error.h  type_name.h
reading/: reading.cpp
save_instances/: CMakeLists.txt
save_instances/src/: save_instance.cpp
skp2skp/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.cmd
skp2skp/src/: s2s.cpp
transform_entities/: CMakeLists.txt
transform_entities/src/: transform.cpp
typed-value-array-example/: CMakeLists.txt
typed-value-array-example/src/: main.cpp
utilities/: get_instances.h  get_string.h  sketchup_error_string.h
wrapper/: CMakeLists.txt  SketchUp.props
wrapper/VisualStudio/: Wrapper.sln  Wrapper.vcxproj  Wrapper.vcxproj.filters
wrapper/VisualStudio/Debug/: vc140.idb
wrapper/VisualStudio/Debug/Wrapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Wrapper.lastbuildstate
wrapper/VisualStudio/x64/Debug/: Wrapper.idb  Wrapper.lib  vc140.idb
wrapper/VisualStudio/x64/Debug/Wrapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Wrapper.lastbuildstate  lib.command.1.tlog
wrapper/src/: ComponentDefinition.cpp  ComponentDefinition.h  ComponentInstance.cpp  ComponentInstance.h  DrawingElement.h  Entities.cpp  Entities.h  Entity.cpp  Entity.h  Group.h  GuideLine.cpp  Model.cpp  Model.h  SUWrapper.h
writing_to_a_skp_file/: writing.cpp
